Build fixes after upgrading to Kotlin 2.2.0